# Embedded_Project

./: .gitignore  README.md
.cursor/skills/stm32-hal-cmake/: SKILL.md
AVR_Cop/: .gitignore  README.md
AVR_Cop/Attiny85-Dimmer/: PWM평활_증폭회로_설계.txt  USBasp_업로드_가이드.txt  platformio.ini  코드_설명서.txt
AVR_Cur/: README.md
AVR_Cur/Attiny85-Dimmer/: ADC_보정_수정사항.txt  SmartProg2_업로드_가이드.txt  pio_aliases.ps1  코드_설명서.txt
AVR_Cur/Attiny85-Dimmer/.github/: copilot-instructions.md
AVR_Cur/Attiny85-Dimmer/src/: main.cpp
STM32_Cop/: .gitignore
STM32_Cop/ms_main_board_st/: CMakeLists.txt
STM32_Cop/ms_main_board_st/.github/: copilot-instructions-ultrasonic-backup.md  copilot-instructions.md
STM32_Cop/ms_main_board_st/.github/agents/: hw-driver.agent.md  megasonic.agent.md  protocol.agent.md  ui.agent.md
STM32_Cop/ms_main_board_st/.github/skills/stm32g4-dev/: SKILL.md
STM32_Cop/ms_main_board_st/.github/skills/stm32g4-dev/references/: code-templates.md  hal-patterns.md  register-quirks.md
STM32_Cop/ms_main_board_st/cmake/: gcc-arm-none-eabi.cmake
STM32_Cop/ms_main_board_st/docs/: ARCHITECTURE.md  HS_AUP_메가소닉_부품구성_260323.xlsx  LTC5507_schematic_notes.md  MCP_서버_사용법.md  Modbus_레지스터맵.md  PLANS.md  SAFETY.md  STM32G474MET6_LQFP64_핀맵.md  STM32G474MET6_LQFP80_핀맵.md  STM32G474MET6_LQFP80_핀맵.xlsx  WORKFLOW.md  bringup_64pin_smoke_test.md  circuit_ref.html  circuit_ref.md  circuit_ref_64pin.html  circuit_ref_64pin.md  cubemx_64pin_onepage_checklist.html  cubemx_64pin_onepage_checklist.md  cubemx_64pin_pin_table.html  cubemx_64pin_pin_table.md  ltc5507_회로도_검토_0a9096b1.plan.md  md_to_html.py  회로설계_사전점검.md
STM32_Cop/ms_main_board_st/docs/ref_docs/: circuit_ref_80pin.html  circuit_ref_80pin.md
STM32_Cop/ms_main_board_st/include/: button.h  config.h  gpio_init.h  lcd1602_hw.h  megasonic_ctrl.h  megasonic_pwm.h  menu_screen.h  modbus_crc.h  params.h  stm32g4xx_hal_conf.h  stm32g4xx_it.h  system_clock.h
STM32_Cop/ms_main_board_st/ldscripts/: STM32G474METx_FLASH.ld
STM32_Cop/ms_main_board_st/src/: gpio_init.c  lcd1602_hw.c  main.c  megasonic_ctrl.c  megasonic_pwm.c  menu.c  menu_screen.c  modbus_crc.c  modbus_regs.c  modbus_rtu.c  stm32g4xx_it.c  system_clock.c
STM32_Cop/ms_main_board_st/startup/: startup_stm32g474xx.s
STM32_Cop/us_main_board_st/: CMakeLists.txt
STM32_Cop/us_main_board_st/.github/: copilot-instructions.md
STM32_Cop/us_main_board_st/.github/agents/: hw-driver.agent.md  protocol.agent.md  ui.agent.md  ultrasonic.agent.md
STM32_Cop/us_main_board_st/cmake/: gcc-arm-none-eabi.cmake
STM32_Cop/us_main_board_st/docs/: ARCHITECTURE.md  Modbus_레지스터맵.md  PLANS.md  SAFETY.md  STM32G474RC_핀맵.md  STM32G474RC_핀맵.xlsx  WORKFLOW.md  generate_pinmap_xlsx.py
STM32_Cop/us_main_board_st/include/: adc_control.h  config.h  lcd1602.h  menu.h  modbus_regs.h  modbus_rtu.h  params.h  selftest.h  stm32g4xx_hal_conf.h  stm32g4xx_it.h  system_clock.h  ultrasonic_ctrl.h  ultrasonic_pwm.h
STM32_Cop/us_main_board_st/ldscripts/: STM32G474RCTx_FLASH.ld
STM32_Cop/us_main_board_st/src/: adc_control.c  button.c  gpio_init.c  lcd1602.c  lcd1602_hw.c  main.c  menu.c  menu_screen.c  modbus_regs.c  modbus_rtu.c  selftest.c  stm32g4xx_it.c  syscalls.c  system_clock.c  ultrasonic_ctrl.c  ultrasonic_pwm.c
STM32_Cop/us_main_board_st/startup/: startup_stm32g474xx.s
STM32_Cop/us_main_board_st/tests/: run_tests.bat  test_logic.c  test_logic.py
STM32_Cur/: spmeesseman.vscode-taskexplorer-3.0.10.vsix  stmicroelectronics.stm32cube-ide-clangd-1.0.2.vsix  stmicroelectronics.stm32cube-ide-debug-core-1.1.0.vsix  stmicroelectronics.stm32cube-ide-debug-generic-gdbserver-1.1.0.vsix  stmicroelectronics.stm32cube-ide-debug-jlink-gdbserver-1.1.0.vsix  stmicroelectronics.stm32cube-ide-debug-stlink-gdbserver-1.1.0.vsix  stmicroelectronics.stm32cube-ide-project-manager-1.1.0.vsix  stmicroelectronics.stm32cube-ide-registers-1.1.0.vsix
avr/: README.md
avr/Attiny85-Dimmer/: SmartProg2_퓨즈비트_설정.txt  platformio.ini  코드_설명서.txt
avr/Attiny85-Dimmer/src/: main.cpp  main_uno.cpp
kicad/: .gitignore  CMakeLists_nucleo.txt  README.md
kicad/ELSONIC/KI_Mega_PWBD/: KI_Mega_PWBD.kicad_pro  KI_Mega_PWBD.kicad_sch
kicad/ELSONIC/MAIN_BD_NV1/MAIN_BD_NV1/: MAIN_BD_NV1.kicad_pro  MAIN_BD_NV1.kicad_sch
kicad/ELSONIC/Multi_Mega_Display_V2/: #auto_saved_files#  Multi_Mega_Display_V2.kicad_pro  Multi_Mega_Display_V2.kicad_sch
kicad/ELSONIC/Multi_Mega_Main_V1/: #auto_saved_files#  Multi_Mega_Main_V1.kicad_pcb  Multi_Mega_Main_V1.kicad_pro  Multi_Mega_Main_V1.kicad_sch  Multi_Mega_Main_V1.kicad_sch-bak
kicad/ELSONIC/Multi_Mega_Main_V2/: Multi_Mega_Main_V2.kicad_pro  Multi_Mega_Main_V2.kicad_sch
kicad/ELSONIC/POWER_BD_NV2/: POWER_BD_NV2-altium-import.kicad_sym  POWER_BD_NV2.csv  POWER_BD_NV2.kicad_pro  POWER_BD_NV2.kicad_sch  POWER_BD_NV2.xlsx  sym-lib-table
kicad/ELSONIC/POWER_BD_NV2/POWER_BD_NV2_GBR/: POWER_BD_NV2-B_Cu.gbr  POWER_BD_NV2-B_Mask.gbr  (+3 more)
kicad/ELSONIC/POWER_BD_SV2/: POWER_BD_SV2-top-pos.csv  POWER_BD_SV2-top-pos.xlsx  POWER_BD_SV2.csv  POWER_BD_SV2.kicad_pcb  POWER_BD_SV2.kicad_pro  POWER_BD_SV2.kicad_sch  POWER_BD_SV2.xlsx
kicad/ELSONIC/POWER_BD_SV3/: POWER_BD_SV2-top-pos.xlsx  POWER_BD_SV2_panelized-top-pos.xlsx  POWER_BD_SV3-top-pos.csv  POWER_BD_SV3.csv  POWER_BD_SV3.kicad_pcb  POWER_BD_SV3.kicad_pro  POWER_BD_SV3.kicad_sch  POWER_BD_SV3.kicad_sch-bak  POWER_BD_SV3.xlsx  POWER_BD_SV3_arr.kicad_pcb  POWER_BD_SV3_arr.kicad_pro  POWER_BD_SV3_panelized-top-pos.csv
kicad/ELSONIC/ST_MAIN_BD_NV1/: ST_MAIN_BD_NV1.kicad_pro  ST_MAIN_BD_NV1.kicad_sch
kicad/ELSONIC/Test_01/: Test_01.kicad_pcb  Test_01.kicad_pro  Test_01.kicad_sch
kicad/ELSONIC/exam_nucleo64_01/: exam_nucleo64_01.kicad_pro
kicad/ELSONIC/exam_uno_01/: exam_uno_01.kicad_pro
kicad/KiCAD_MyLib/packages3D/: EER2835_12P.SLDPRT
kicad/KiCAD_MyLib/symbols/: 00_MyLib_MCU.kicad_sym  01_MyLib_ICs.kicad_sym  02_MyLib_Connectors.kicad_sym  03_MyLib_Active.kicad_sym  04_MyLib_Passive.kicad_sym  05_MyLib_Others.kicad_sym  06_MyLib_Mechanical.kicad_sym  Driver_FET.kicad_sym  TL431ACLPR.kicad_sym  WL-TMRC_3MM.kicad_sym
stm32/: .gitignore  README.md
(+272 files in other folders)
